--- a/index.html
+++ b/index.html
@@ -1,7 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <div class="player-information">
+        <h2>put your name and type enter</h2>
+        <form action="" id="myForm">
+            <div class="player-inputName">
+                <input type="text" name="" id="inputPlayerName" placeholder="player name">
+            </div>
+            <select name="round" id="round-inputNumber">
+                <option value="">--Please choose your number of round</option>
+                <option value="3">3</option>
+                <option value="5">5</option>
+            </select>
+            <input type="submit" value="Enter">
+        </form>
+    </div>
+
+    <div class="main-game">
+        <div class="scoring-board">
+            <h1>score</h1>
+            <div class="score">
+                <h2 id="playerName">Player</h2>
+                <p id="player-score">0</p>
+            </div>
+
+            <div class="score">
+                <h2>Computer</h2>
+                <p id="computer-score">0</p>
+            </div>
+
+            <div class="score">
+                <h2>Round number : <span id="round-number"></span></h2>
+                <h2>Game Played : <span id="played-game-count"></span></h2>
+            </div>
+        </div>
+
+        <div class="img-block">
+            <img src="images/rock.png" alt="">
+            <img src="images/paper.png" alt="">
+            <img src="images/scissors.png" alt="">
+        </div>
+
+        <p id="playerChoice"></p>
+        <p id="computerChoice"></p>
+
+        <div class="btns">
+            <button class="btn-selection" id="rock">rock</button>
+            <button class="btn-selection" id="paper">paper</button>
+            <button class="btn-selection" id="scissors">scissors</button>
+            <button id="restart">restart</button>
+        </div>
+
+        <div>
+            <h2>WINNER IS : <span id="winner-name"></span></h2>
+        </div>
+    </div>
+    <script src="script2.js"></script>
 </body>
+
 </html>
