--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+    <h1>I'll update the UI step by step but the main backend code works well ! Thank you</h1>
     <div class="player-information">
         <h2>put your name and type enter</h2>
         <form action="" id="myForm">
