--- a/index.html
+++ b/index.html
@@ -10,62 +10,62 @@
 
 <body>
 
-    <h1>I'll update the UI step by step but the main backend code works well ! Thank you</h1>
-    <div class="player-information">
-        <h2>put your name and type enter</h2>
-        <form action="" id="myForm">
-            <div class="player-inputName">
-                <input type="text" name="" id="inputPlayerName" placeholder="player name">
-            </div>
-            <select name="round" id="round-inputNumber">
-                <option value="">--Please choose your number of round</option>
-                <option value="3">3</option>
-                <option value="5">5</option>
-            </select>
-            <input type="submit" value="Enter">
-        </form>
-    </div>
-
-    <div class="main-game">
-        <div class="scoring-board">
-            <h1>score</h1>
-            <div class="score">
-                <h2 id="playerName">Player</h2>
-                <p id="player-score">0</p>
-            </div>
-
-            <div class="score">
-                <h2>Computer</h2>
-                <p id="computer-score">0</p>
-            </div>
-
-            <div class="score">
-                <h2>Round number : <span id="round-number"></span></h2>
-                <h2>Game Played : <span id="played-game-count"></span></h2>
-            </div>
+    <h1>I'll update the UI step by step but the main backend code works well ! Thank you !/h1>
+        <div class="player-information">
+            <h2>put your name and type enter</h2>
+            <form action="" id="myForm">
+                <div class="player-inputName">
+                    <input type="text" name="" id="inputPlayerName" placeholder="player name">
+                </div>
+                <select name="round" id="round-inputNumber">
+                    <option value="">--Please choose your number of round</option>
+                    <option value="3">3</option>
+                    <option value="5">5</option>
+                </select>
+                <input type="submit" value="Enter">
+            </form>
         </div>
 
-        <div class="img-block">
-            <img src="images/rock.png" alt="">
-            <img src="images/paper.png" alt="">
-            <img src="images/scissors.png" alt="">
-        </div>
+        <div class="main-game">
+            <div class="scoring-board">
+                <h1>score</h1>
+                <div class="score">
+                    <h2 id="playerName">Player</h2>
+                    <p id="player-score">0</p>
+                </div>
 
-        <p id="playerChoice"></p>
-        <p id="computerChoice"></p>
+                <div class="score">
+                    <h2>Computer</h2>
+                    <p id="computer-score">0</p>
+                </div>
 
-        <div class="btns">
-            <button class="btn-selection" id="rock">rock</button>
-            <button class="btn-selection" id="paper">paper</button>
-            <button class="btn-selection" id="scissors">scissors</button>
-            <button id="restart">restart</button>
-        </div>
+                <div class="score">
+                    <h2>Round number : <span id="round-number"></span></h2>
+                    <h2>Game Played : <span id="played-game-count"></span></h2>
+                </div>
+            </div>
 
-        <div>
-            <h2>WINNER IS : <span id="winner-name"></span></h2>
+            <div class="img-block">
+                <img src="images/rock.png" alt="">
+                <img src="images/paper.png" alt="">
+                <img src="images/scissors.png" alt="">
+            </div>
+
+            <p id="playerChoice"></p>
+            <p id="computerChoice"></p>
+
+            <div class="btns">
+                <button class="btn-selection" id="rock">rock</button>
+                <button class="btn-selection" id="paper">paper</button>
+                <button class="btn-selection" id="scissors">scissors</button>
+                <button id="restart">restart</button>
+            </div>
+
+            <div>
+                <h2>WINNER IS : <span id="winner-name"></span></h2>
+            </div>
         </div>
-    </div>
-    <script src="script2.js"></script>
+        <script src="script2.js"></script>
 </body>
 
 </html>
