--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2>WINNER IS : <span id="winner-name"></span></h2>
         </div>
     </div>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
