--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
 </head>
 
 <body>
-
-    <h1>I'll update the UI step by step but the main backend code works well ! Thank you !</h1>
     <div class="player-information">
         <div class="container">
             <h2 id="msg-information">put your name and type/click on enter</h2>
@@ -31,7 +29,7 @@
     <div class="main-game">
         <div class="scoring-board">
             <h1>Scoring</h1>
-            <h2>Round number : <span id="round-number"></span></h2>
+            <h2>best of <span id="round-number"></span> rounds</h2>
             <div class="main-score-panel">
                 <div class="player-score">
                     <h2 id="playerName">Player</h2>
@@ -60,9 +58,6 @@
         <p id="computerChoice"></p>
 
         <div class="btns">
-            <!-- <button class="btn-selection btn-game" id="rock">rock</button>
-            <button class="btn-selection btn-game" id="paper">paper</button>
-            <button class="btn-selection btn-game" id="scissors">scissors</button> -->
             <button id="restart">restart</button>
         </div>
 
